Stage 2. Uncorrected stopped, not full change status site to FAILED